--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="about_douban">\@douban-douya</string>
 
 
-    <string name="app_name">菜鸟微博</string>
+    <string name="app_name">JT微博</string>
     <string name="action_settings">Settings</string>
     <string name="second_activity">第二个 activity</string>
     <string name="button">Button</string>
