--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,5 +36,6 @@
     <string name="lbl_fav">我的收藏</string>
     <string name="lbl_logout">退出登录</string>
     <string name="title_weibo_detail">微博正文</string>
+    <string name="hello">hello</string>
 
 </resources>
