添加点击view显示正文功能

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="newest">最新</string>
     <string name="lbl_home">首页</string>
     <string name="lbl_write_article">发微博</string>
+    <string name="lbl_article">微博正文</string>
     <string name="lbl_message">信息</string>
     <string name="lbl_profile">我的</string>
     <string name="lbl_landing">菜鸟窝</string>
@@ -24,6 +25,9 @@
     <string name="hint_please_input_content">请输入文本内容</string>
     <string name="lbl_post">发送</string>
     <string name="lbl_repost">转发微博</string>
+    <string name="lbl_tv_repost">转发</string>
+    <string name="lbl_tv_comment">评论</string>
+    <string name="lbl_tv_like">赞</string>
     <string name="lbl_comment">评论微博</string>
     <string name="lbl_others_comment">评论</string>
     <string name="lbl_mysend_comment">我发出的评论</string>
